--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <h1>Subdirs</h1>
 <h3><a href="food">food</a></h3>
 <h3><a href="me">me</a></h3>
+<h3><a href="random">random</a></h3>
 <h3><a href="tech">tech</a></h3>
 <h1>Images</h1>
 <div style="width: 100vw; display: flex; flex-direction: row;  flex-wrap: wrap; ">
