--- a/food/index.html
+++ b/food/index.html
@@ -346,18 +346,66 @@
 </div>
 <div style="width: 33vw; height: 33vh; ">
 <div style="width: 100%; height: 90%;">
-<img style="height: 100%;" src="thumb-manzana.jpg"></a>
+<img style="height: 100%;" src="thumb-IMG_20251105_123058083.jpg"></a>
 </div>
 <div style="width: 100%; height: 10%;">
-<a href="manzana.jpg">manzana.jpg</a>
+<a href="IMG_20251105_123058083.jpg">IMG_20251105_123058083.jpg</a>
 </div>
 </div>
 <div style="width: 33vw; height: 33vh; ">
 <div style="width: 100%; height: 90%;">
-<img style="height: 100%;" src="thumb-Untitled.jpg"></a>
+<img style="height: 100%;" src="thumb-IMG_20251105_123101912.jpg"></a>
 </div>
 <div style="width: 100%; height: 10%;">
-<a href="Untitled.jpg">Untitled.jpg</a>
+<a href="IMG_20251105_123101912.jpg">IMG_20251105_123101912.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251105_123106910.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251105_123106910.jpg">IMG_20251105_123106910.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251106_171555356_HDR.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251106_171555356_HDR.jpg">IMG_20251106_171555356_HDR.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251106_171559150.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251106_171559150.jpg">IMG_20251106_171559150.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251106_171604790.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251106_171604790.jpg">IMG_20251106_171604790.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251106_171610962.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251106_171610962.jpg">IMG_20251106_171610962.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-manzana.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="manzana.jpg">manzana.jpg</a>
 </div>
 </div>
 <div style="width: 33vw; height: 33vh; ">
