--- a/food/index.html
+++ b/food/index.html
@@ -322,6 +322,30 @@
 </div>
 <div style="width: 33vw; height: 33vh; ">
 <div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20250818_165401223.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20250818_165401223.jpg">IMG_20250818_165401223.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20250818_165407714.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20250818_165407714.jpg">IMG_20250818_165407714.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20250818_165409187.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20250818_165409187.jpg">IMG_20250818_165409187.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
 <img style="height: 100%;" src="thumb-IMG_20251015_191303846.jpg"></a>
 </div>
 <div style="width: 100%; height: 10%;">
@@ -550,6 +574,46 @@
 </div>
 <div style="width: 100%; height: 10%;">
 <a href="manzana.jpg">manzana.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-mpv-shot0001.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="mpv-shot0001.jpg">mpv-shot0001.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-mpv-shot0002.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="mpv-shot0002.jpg">mpv-shot0002.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-mpv-shot0003.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="mpv-shot0003.jpg">mpv-shot0003.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-mpv-shot0004.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="mpv-shot0004.jpg">mpv-shot0004.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-mpv-shot0005.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="mpv-shot0005.jpg">mpv-shot0005.jpg</a>
 </div>
 </div>
 <div style="width: 33vw; height: 33vh; ">
