--- a/food/index.html
+++ b/food/index.html
@@ -570,6 +570,38 @@
 </div>
 <div style="width: 33vw; height: 33vh; ">
 <div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251117_021304921.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251117_021304921.jpg">IMG_20251117_021304921.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251117_021315854.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251117_021315854.jpg">IMG_20251117_021315854.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251117_021344400.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251117_021344400.jpg">IMG_20251117_021344400.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251117_021401699.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251117_021401699.jpg">IMG_20251117_021401699.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
 <img style="height: 100%;" src="thumb-manzana.jpg"></a>
 </div>
 <div style="width: 100%; height: 10%;">
