--- a/food/index.html
+++ b/food/index.html
@@ -682,6 +682,62 @@
 </div>
 <div style="width: 33vw; height: 33vh; ">
 <div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG-20251121-WA0004.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG-20251121-WA0004.jpg">IMG-20251121-WA0004.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251122_114318353.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251122_114318353.jpg">IMG_20251122_114318353.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251122_114321930.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251122_114321930.jpg">IMG_20251122_114321930.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251122_114338725.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251122_114338725.jpg">IMG_20251122_114338725.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251122_114342205.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251122_114342205.jpg">IMG_20251122_114342205.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251122_114350955.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251122_114350955.jpg">IMG_20251122_114350955.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251122_114557189.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251122_114557189.jpg">IMG_20251122_114557189.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
 <img style="height: 100%;" src="thumb-manzana.jpg"></a>
 </div>
 <div style="width: 100%; height: 10%;">
