--- a/food/index.html
+++ b/food/index.html
@@ -738,6 +738,30 @@
 </div>
 <div style="width: 33vw; height: 33vh; ">
 <div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251122_122129288.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251122_122129288.jpg">IMG_20251122_122129288.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251122_122137392.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251122_122137392.jpg">IMG_20251122_122137392.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251122_122141304.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251122_122141304.jpg">IMG_20251122_122141304.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
 <img style="height: 100%;" src="thumb-manzana.jpg"></a>
 </div>
 <div style="width: 100%; height: 10%;">
