--- a/random/index.html
+++ b/random/index.html
@@ -48,6 +48,86 @@
 <a href="IMG_20251120_162418041.jpg">IMG_20251120_162418041.jpg</a>
 </div>
 </div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251125_124754107.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251125_124754107.jpg">IMG_20251125_124754107.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251125_132002100.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251125_132002100.jpg">IMG_20251125_132002100.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251125_132025590.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251125_132025590.jpg">IMG_20251125_132025590.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251125_132030636.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251125_132030636.jpg">IMG_20251125_132030636.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251125_132100128.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251125_132100128.jpg">IMG_20251125_132100128.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251125_132115532.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251125_132115532.jpg">IMG_20251125_132115532.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251125_132123013.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251125_132123013.jpg">IMG_20251125_132123013.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251126_025223728.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251126_025223728.jpg">IMG_20251126_025223728.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251126_025236772.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251126_025236772.jpg">IMG_20251126_025236772.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251126_025303184.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251126_025303184.jpg">IMG_20251126_025303184.jpg</a>
+</div>
+</div>
 </div>
 <h1>Videos</h1>
 <div style="width: 100vw; display: flex; flex-direction: row;  flex-wrap: wrap; ">
