--- a/food/index.html
+++ b/food/index.html
@@ -762,6 +762,70 @@
 </div>
 <div style="width: 33vw; height: 33vh; ">
 <div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251127_133919643.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251127_133919643.jpg">IMG_20251127_133919643.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251127_192209940.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251127_192209940.jpg">IMG_20251127_192209940.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251127_192217777.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251127_192217777.jpg">IMG_20251127_192217777.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251127_192222860.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251127_192222860.jpg">IMG_20251127_192222860.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251127_192234615.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251127_192234615.jpg">IMG_20251127_192234615.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251127_192243664.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251127_192243664.jpg">IMG_20251127_192243664.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251127_192254161.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251127_192254161.jpg">IMG_20251127_192254161.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251127_192307036.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251127_192307036.jpg">IMG_20251127_192307036.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
 <img style="height: 100%;" src="thumb-manzana.jpg"></a>
 </div>
 <div style="width: 100%; height: 10%;">
