--- a/random/index.html
+++ b/random/index.html
@@ -26,6 +26,30 @@
 </div>
 <div style="width: 33vw; height: 33vh; ">
 <div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20250910_182147152.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20250910_182147152.jpg">IMG_20250910_182147152.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20250914_101040843.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20250914_101040843.jpg">IMG_20250914_101040843.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20250914_101046004.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20250914_101046004.jpg">IMG_20250914_101046004.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
 <img style="height: 100%;" src="thumb-IMG_20251120_162408484.jpg"></a>
 </div>
 <div style="width: 100%; height: 10%;">
