--- a/food/index.html
+++ b/food/index.html
@@ -762,6 +762,14 @@
 </div>
 <div style="width: 33vw; height: 33vh; ">
 <div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG-20251124-WA0008.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG-20251124-WA0008.jpg">IMG-20251124-WA0008.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
 <img style="height: 100%;" src="thumb-IMG_20251127_133919643.jpg"></a>
 </div>
 <div style="width: 100%; height: 10%;">
@@ -822,6 +830,22 @@
 </div>
 <div style="width: 100%; height: 10%;">
 <a href="IMG_20251127_192307036.jpg">IMG_20251127_192307036.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251128_060414720.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251128_060414720.jpg">IMG_20251128_060414720.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251128_060425329.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251128_060425329.jpg">IMG_20251128_060425329.jpg</a>
 </div>
 </div>
 <div style="width: 33vw; height: 33vh; ">
