--- a/random/index.html
+++ b/random/index.html
@@ -176,6 +176,22 @@
 <a href="IMG_20251126_202913014.jpg">IMG_20251126_202913014.jpg</a>
 </div>
 </div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251128_053642324.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251128_053642324.jpg">IMG_20251128_053642324.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251128_053650280.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251128_053650280.jpg">IMG_20251128_053650280.jpg</a>
+</div>
+</div>
 </div>
 <h1>Videos</h1>
 <div style="width: 100vw; display: flex; flex-direction: row;  flex-wrap: wrap; ">
