--- a/food/index.html
+++ b/food/index.html
@@ -850,6 +850,62 @@
 </div>
 <div style="width: 33vw; height: 33vh; ">
 <div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251128_081320493.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251128_081320493.jpg">IMG_20251128_081320493.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251128_104451922.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251128_104451922.jpg">IMG_20251128_104451922.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251128_104504967.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251128_104504967.jpg">IMG_20251128_104504967.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251128_111239705.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251128_111239705.jpg">IMG_20251128_111239705.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251128_111242988.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251128_111242988.jpg">IMG_20251128_111242988.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251128_111248489.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251128_111248489.jpg">IMG_20251128_111248489.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251128_111317267.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251128_111317267.jpg">IMG_20251128_111317267.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
 <img style="height: 100%;" src="thumb-manzana.jpg"></a>
 </div>
 <div style="width: 100%; height: 10%;">
