--- a/random/index.html
+++ b/random/index.html
@@ -192,6 +192,30 @@
 <a href="IMG_20251128_053650280.jpg">IMG_20251128_053650280.jpg</a>
 </div>
 </div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251128_113445180.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251128_113445180.jpg">IMG_20251128_113445180.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251128_113455108.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251128_113455108.jpg">IMG_20251128_113455108.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251128_113459919.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251128_113459919.jpg">IMG_20251128_113459919.jpg</a>
+</div>
+</div>
 </div>
 <h1>Videos</h1>
 <div style="width: 100vw; display: flex; flex-direction: row;  flex-wrap: wrap; ">
