--- a/food/index.html
+++ b/food/index.html
@@ -906,6 +906,30 @@
 </div>
 <div style="width: 33vw; height: 33vh; ">
 <div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251128_114901122.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251128_114901122.jpg">IMG_20251128_114901122.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251128_114903463.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251128_114903463.jpg">IMG_20251128_114903463.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251128_114909875.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251128_114909875.jpg">IMG_20251128_114909875.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
 <img style="height: 100%;" src="thumb-manzana.jpg"></a>
 </div>
 <div style="width: 100%; height: 10%;">
