--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <h3><a href="food">food</a></h3>
 <h3><a href="me">me</a></h3>
 <h3><a href="random">random</a></h3>
+<h3><a href="reparaciontecho">reparaciontecho</a></h3>
 <h3><a href="tech">tech</a></h3>
+<h3><a href="ticket">ticket</a></h3>
 <h1>Images</h1>
 <div style="width: 100vw; display: flex; flex-direction: row;  flex-wrap: wrap; ">
 </div>
