--- a/random/index.html
+++ b/random/index.html
@@ -216,6 +216,110 @@
 <a href="IMG_20251128_113459919.jpg">IMG_20251128_113459919.jpg</a>
 </div>
 </div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251128_133433506.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251128_133433506.jpg">IMG_20251128_133433506.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251128_133442427.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251128_133442427.jpg">IMG_20251128_133442427.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251128_133458133.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251128_133458133.jpg">IMG_20251128_133458133.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251128_133557991.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251128_133557991.jpg">IMG_20251128_133557991.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251128_172126628.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251128_172126628.jpg">IMG_20251128_172126628.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251128_173942497.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251128_173942497.jpg">IMG_20251128_173942497.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251128_173952056.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251128_173952056.jpg">IMG_20251128_173952056.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251128_174023330.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251128_174023330.jpg">IMG_20251128_174023330.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251128_174033787.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251128_174033787.jpg">IMG_20251128_174033787.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251128_174036286.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251128_174036286.jpg">IMG_20251128_174036286.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251128_174241613.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251128_174241613.jpg">IMG_20251128_174241613.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251128_174555271.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251128_174555271.jpg">IMG_20251128_174555271.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251128_174559909.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251128_174559909.jpg">IMG_20251128_174559909.jpg</a>
+</div>
+</div>
 </div>
 <h1>Videos</h1>
 <div style="width: 100vw; display: flex; flex-direction: row;  flex-wrap: wrap; ">
