--- a/food/index.html
+++ b/food/index.html
@@ -1002,6 +1002,14 @@
 </div>
 <div style="width: 33vw; height: 33vh; ">
 <div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG-20251129-WA0000.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG-20251129-WA0000.jpg">IMG-20251129-WA0000.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
 <img style="height: 100%;" src="thumb-manzana.jpg"></a>
 </div>
 <div style="width: 100%; height: 10%;">
