--- a/food/index.html
+++ b/food/index.html
@@ -58,6 +58,22 @@
 </div>
 <div style="width: 33vw; height: 33vh; ">
 <div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-helado_hamburguesa.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="helado_hamburguesa.jpg">helado_hamburguesa.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-helado_uva_papa_asado.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="helado_uva_papa_asado.jpg">helado_uva_papa_asado.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
 <img style="height: 100%;" src="thumb-IMG_20240925_125254.jpg"></a>
 </div>
 <div style="width: 100%; height: 10%;">
@@ -770,6 +786,46 @@
 </div>
 <div style="width: 33vw; height: 33vh; ">
 <div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251125_132002100.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251125_132002100.jpg">IMG_20251125_132002100.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251125_132115532.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251125_132115532.jpg">IMG_20251125_132115532.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251125_132123013.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251125_132123013.jpg">IMG_20251125_132123013.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251126_123159320.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251126_123159320.jpg">IMG_20251126_123159320.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251126_202913014.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251126_202913014.jpg">IMG_20251126_202913014.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
 <img style="height: 100%;" src="thumb-IMG_20251127_133919643.jpg"></a>
 </div>
 <div style="width: 100%; height: 10%;">
@@ -1002,6 +1058,46 @@
 </div>
 <div style="width: 33vw; height: 33vh; ">
 <div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251129_114113269.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251129_114113269.jpg">IMG_20251129_114113269.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251129_114119616.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251129_114119616.jpg">IMG_20251129_114119616.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251129_114135934.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251129_114135934.jpg">IMG_20251129_114135934.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251129_115837310.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251129_115837310.jpg">IMG_20251129_115837310.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251129_115844279.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251129_115844279.jpg">IMG_20251129_115844279.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
 <img style="height: 100%;" src="thumb-IMG-20251129-WA0000.jpg"></a>
 </div>
 <div style="width: 100%; height: 10%;">
@@ -1054,6 +1150,14 @@
 </div>
 <div style="width: 100%; height: 10%;">
 <a href="mpv-shot0005.jpg">mpv-shot0005.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-uvas.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="uvas.jpg">uvas.jpg</a>
 </div>
 </div>
 <div style="width: 33vw; height: 33vh; ">
