--- a/tech/index.html
+++ b/tech/index.html
@@ -18,6 +18,22 @@
 </div>
 <div style="width: 33vw; height: 33vh; ">
 <div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251126_025223728.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251126_025223728.jpg">IMG_20251126_025223728.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251126_025303184.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251126_025303184.jpg">IMG_20251126_025303184.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
 <img style="height: 100%;" src="thumb-Untitled.jpg"></a>
 </div>
 <div style="width: 100%; height: 10%;">
