--- a/food/index.html
+++ b/food/index.html
@@ -1106,6 +1106,22 @@
 </div>
 <div style="width: 33vw; height: 33vh; ">
 <div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251130_103836261_HDR.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251130_103836261_HDR.jpg">IMG_20251130_103836261_HDR.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251130_193936369.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251130_193936369.jpg">IMG_20251130_193936369.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
 <img style="height: 100%;" src="thumb-manzana.jpg"></a>
 </div>
 <div style="width: 100%; height: 10%;">
