--- a/ticket/index.html
+++ b/ticket/index.html
@@ -88,6 +88,38 @@
 <a href="IMG_20251129_115007195.jpg">IMG_20251129_115007195.jpg</a>
 </div>
 </div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251202_101759555.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251202_101759555.jpg">IMG_20251202_101759555.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251202_101805290.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251202_101805290.jpg">IMG_20251202_101805290.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251202_101809356.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251202_101809356.jpg">IMG_20251202_101809356.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251202_101816528.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251202_101816528.jpg">IMG_20251202_101816528.jpg</a>
+</div>
+</div>
 </div>
 <h1>Videos</h1>
 <div style="width: 100vw; display: flex; flex-direction: row;  flex-wrap: wrap; ">
