--- a/food/index.html
+++ b/food/index.html
@@ -1130,6 +1130,118 @@
 </div>
 <div style="width: 33vw; height: 33vh; ">
 <div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251202_182330303.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251202_182330303.jpg">IMG_20251202_182330303.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251202_182331341.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251202_182331341.jpg">IMG_20251202_182331341.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251202_182338464.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251202_182338464.jpg">IMG_20251202_182338464.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251202_182353025.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251202_182353025.jpg">IMG_20251202_182353025.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251202_182355974.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251202_182355974.jpg">IMG_20251202_182355974.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251202_182359024.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251202_182359024.jpg">IMG_20251202_182359024.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251202_183403684.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251202_183403684.jpg">IMG_20251202_183403684.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251202_184300582.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251202_184300582.jpg">IMG_20251202_184300582.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251202_184301464.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251202_184301464.jpg">IMG_20251202_184301464.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251203_123247104.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251203_123247104.jpg">IMG_20251203_123247104.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251203_123255759.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251203_123255759.jpg">IMG_20251203_123255759.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251207_145456749_BURST000_COVER_TOP.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251207_145456749_BURST000_COVER_TOP.jpg">IMG_20251207_145456749_BURST000_COVER_TOP.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251207_145456749_BURST001.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251207_145456749_BURST001.jpg">IMG_20251207_145456749_BURST001.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251207_145500167.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251207_145500167.jpg">IMG_20251207_145500167.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
 <img style="height: 100%;" src="thumb-manzana.jpg"></a>
 </div>
 <div style="width: 100%; height: 10%;">
