--- a/random/index.html
+++ b/random/index.html
@@ -208,6 +208,54 @@
 <a href="IMG_20251128_174559909.jpg">IMG_20251128_174559909.jpg</a>
 </div>
 </div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251130_193936369.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251130_193936369.jpg">IMG_20251130_193936369.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251202_182330303.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251202_182330303.jpg">IMG_20251202_182330303.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251202_182359024.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251202_182359024.jpg">IMG_20251202_182359024.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251202_183403684.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251202_183403684.jpg">IMG_20251202_183403684.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251202_184300582.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251202_184300582.jpg">IMG_20251202_184300582.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251202_184301464.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251202_184301464.jpg">IMG_20251202_184301464.jpg</a>
+</div>
+</div>
 </div>
 <h1>Videos</h1>
 <div style="width: 100vw; display: flex; flex-direction: row;  flex-wrap: wrap; ">
