--- a/ticket/index.html
+++ b/ticket/index.html
@@ -128,6 +128,14 @@
 <a href="IMG_20251207_145500167.jpg">IMG_20251207_145500167.jpg</a>
 </div>
 </div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251208_103957633.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251208_103957633.jpg">IMG_20251208_103957633.jpg</a>
+</div>
+</div>
 </div>
 <h1>Videos</h1>
 <div style="width: 100vw; display: flex; flex-direction: row;  flex-wrap: wrap; ">
