--- a/random/index.html
+++ b/random/index.html
@@ -226,6 +226,38 @@
 </div>
 <div style="width: 33vw; height: 33vh; ">
 <div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251202_182331341.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251202_182331341.jpg">IMG_20251202_182331341.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251202_182338464.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251202_182338464.jpg">IMG_20251202_182338464.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251202_182353025.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251202_182353025.jpg">IMG_20251202_182353025.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251202_182355974.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251202_182355974.jpg">IMG_20251202_182355974.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
 <img style="height: 100%;" src="thumb-IMG_20251202_182359024.jpg"></a>
 </div>
 <div style="width: 100%; height: 10%;">
