--- a/tech/index.html
+++ b/tech/index.html
@@ -34,6 +34,22 @@
 </div>
 <div style="width: 33vw; height: 33vh; ">
 <div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251210_120150404.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251210_120150404.jpg">IMG_20251210_120150404.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251210_120155708.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251210_120155708.jpg">IMG_20251210_120155708.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
 <img style="height: 100%;" src="thumb-Untitled.jpg"></a>
 </div>
 <div style="width: 100%; height: 10%;">
