--- a/ticket/index.html
+++ b/ticket/index.html
@@ -122,6 +122,22 @@
 </div>
 <div style="width: 33vw; height: 33vh; ">
 <div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251207_145456749_BURST000_COVER_TOP.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251207_145456749_BURST000_COVER_TOP.jpg">IMG_20251207_145456749_BURST000_COVER_TOP.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251207_145456749_BURST001.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251207_145456749_BURST001.jpg">IMG_20251207_145456749_BURST001.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
 <img style="height: 100%;" src="thumb-IMG_20251207_145500167.jpg"></a>
 </div>
 <div style="width: 100%; height: 10%;">
@@ -130,10 +146,42 @@
 </div>
 <div style="width: 33vw; height: 33vh; ">
 <div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251208_103955300.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251208_103955300.jpg">IMG_20251208_103955300.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
 <img style="height: 100%;" src="thumb-IMG_20251208_103957633.jpg"></a>
 </div>
 <div style="width: 100%; height: 10%;">
 <a href="IMG_20251208_103957633.jpg">IMG_20251208_103957633.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251211_170516463.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251211_170516463.jpg">IMG_20251211_170516463.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251211_170520018.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251211_170520018.jpg">IMG_20251211_170520018.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251211_170523672.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251211_170523672.jpg">IMG_20251211_170523672.jpg</a>
 </div>
 </div>
 </div>
