--- a/random/index.html
+++ b/random/index.html
@@ -288,6 +288,38 @@
 <a href="IMG_20251202_184301464.jpg">IMG_20251202_184301464.jpg</a>
 </div>
 </div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251209_204515433.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251209_204515433.jpg">IMG_20251209_204515433.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251209_204524994.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251209_204524994.jpg">IMG_20251209_204524994.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251210_120150404.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251210_120150404.jpg">IMG_20251210_120150404.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251210_120155708.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251210_120155708.jpg">IMG_20251210_120155708.jpg</a>
+</div>
+</div>
 </div>
 <h1>Videos</h1>
 <div style="width: 100vw; display: flex; flex-direction: row;  flex-wrap: wrap; ">
